# the-softhouse

./: .gitignore  Cargo.toml
documentation/: ROADMAP.yaml
settings/: info.json
settings/commands/: build  run
settings/requirements/: simple_nix.json
settings/shell_startup/: 05400_rust_bin.sh
