[package]
name = "softhouse"
version = "0.1.0"
authors = ["Jeff Hykin <jeff.hykin@gmail.com>"]
edition = "2018"
# keywords = ["cargo", "cargo-subcommand", "cli", "dependencies", "crates"]
# license = "MIT OR Apache-2.0"
# readme = "README.md"
# repository = "https://github.com/g-k/cargo-show"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "softhouse-add-item"
path = "source/cli/add-item.rs"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.8.17"
indexmap = "1.6.2"
common_macros = "0.1.1"

